Development -Satishxi7/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Account_External_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_intrest__c</fullName>
        <formula>(Amount__c  *  Rate_Of_Interst__c  * 1) / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual intrest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Pune</fullName>
                </value>
                <value>
                    <fullName>Banglore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <formula>IF( TEXT(Country__c) = &apos;India&apos;, &apos;+91&apos;,
        if (  TEXT(Country__c)  = &apos;UK&apos;, &apos;+44&apos;, &apos;00&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Visited__c</fullName>
        <label>Country Visited</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>usa</fullName>
                </value>
                <value>
                    <fullName>uk</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>china</fullName>
                </value>
                <value>
                    <fullName>canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Test__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID_Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastRecharge_Amount__c</fullName>
        <label>LastRecharge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Match_Billing_Address__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Match Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_Plan__c</fullName>
        <label>Membership Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>1 Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Of_Branches__c</fullName>
        <label>No Of Branches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Placed_Globally__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Placed Globally</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate_Of_Interst__c</fullName>
        <label>Rate Of Interst</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RecentBill_Paid__c</fullName>
        <label>RecentBill Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSN_Number__c</fullName>
        <inlineHelpText>Please enter SSN Number</inlineHelpText>
        <label>SSN Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Banglore</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Shelfield</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>missori</fullName>
                </value>
                <value>
                    <fullName>florida</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>torento</fullName>
                </value>
                <value>
                    <fullName>beginag</fullName>
                </value>
                <value>
                    <fullName>singapore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk__Create_in_Zendesk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create in Zendesk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Domain_Mapping__c</fullName>
        <label>Domain Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Status__c</fullName>
        <label>Last Sync Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Result__c</fullName>
        <description>Contains the result of whether the Zendesk system was updated with the Account record changes</description>
        <label>Zendesk Support Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Organization_Id__c</fullName>
        <description>Contains the Zendesk ORG Id</description>
        <label>Zendesk Support Organization Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Organization__c</fullName>
        <description>Specify your Zendesk Organization name here if you&apos;d like to override the default behavior of the ticket view.</description>
        <inlineHelpText>Show Zendesk tickets for the specified organization instead of the combined tickets for all users in the account.</inlineHelpText>
        <label>Zendesk Support Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True if the record is not synced with Zendesk Organization</description>
        <label>Zendesk Support Out of Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_oldTags__c</fullName>
        <description>contains the old tags before changes were made to the tags. To handle deleting tags in Zendesk system.</description>
        <label>Zendesk Support Old Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__createdUpdatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in trigger to prevent looping of after insert and update. This flag is used to stop the account that came for creation to get updated again thereby preventing the loop</description>
        <label>createdUpdatedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__BillingAddressStatus__c</fullName>
        <label>Billing Address Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__BillingCountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Country Lookup</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>Accounts (BillingCountryLookup)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__BillingLocationAccuracy__c</fullName>
        <label>Billing Location Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Postal Code</fullName>
                </value>
                <value>
                    <fullName>Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__BillingLocationSource__c</fullName>
        <label>Billing Location Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__BillingStateLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing State Lookup</label>
        <referenceTo>pw_cc__State__c</referenceTo>
        <relationshipLabel>Accounts (BillingStateLookup)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__BillingZipCodeLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Zip/Postal Code Lookup</label>
        <referenceTo>pw_cc__ZipCode__c</referenceTo>
        <relationshipLabel>Accounts (BillingZIPCodeLookup)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__ShippingAddressStatus__c</fullName>
        <label>Shipping Address Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__ShippingCountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Country Lookup</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>ShippingAccounts</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__ShippingLocationAccuracy__c</fullName>
        <label>Shipping Location Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Postal Code</fullName>
                </value>
                <value>
                    <fullName>Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__ShippingLocationSource__c</fullName>
        <label>Shipping Location Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__ShippingStateLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping State Lookup</label>
        <referenceTo>pw_cc__State__c</referenceTo>
        <relationshipLabel>ShippingAccounts</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__ShippingZipCodeLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Zip/Postal Code Lookup</label>
        <referenceTo>pw_cc__ZipCode__c</referenceTo>
        <relationshipLabel>ShippingAccounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>BroadBand_Customer</fullName>
        <active>true</active>
        <label>BroadBand Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>PostPaid_Customer</fullName>
        <active>true</active>
        <label>PostPaid Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>PrePaid_Customer</fullName>
        <active>true</active>
        <label>PrePaid Customer</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Cant_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED( AccountNumber ),   $Profile.Id  &lt;&gt; &apos;00e6A00000121vb&apos;)</errorConditionFormula>
        <errorMessage>Account Number Can&apos;t Be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Number_is_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(AccountNumber)</errorConditionFormula>
        <errorDisplayField>AccountNumber</errorDisplayField>
        <errorMessage>Please Enter the Account Number. Which is Mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_No_Mandatory</fullName>
        <active>false</active>
        <description>Phone no Validations.</description>
        <errorConditionFormula>ISBLANK( Phone )</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please enter the Phone number in the Phone number field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_No_Validation1</fullName>
        <active>false</active>
        <errorConditionFormula>OR(  ISBLANK( Phone )  , LEN( Phone )&lt;&gt;14 )</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please enter 10 degits Phone Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_must_be_10_Degits</fullName>
        <active>false</active>
        <errorConditionFormula>LEN( Phone ) &lt;&gt;14</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please enter a 10 degits Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_SLA_Serial_No</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( SLASerialNumber__c )</errorConditionFormula>
        <errorMessage>SLA Serial Number Required field. Please fill it</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_SLA_filed</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Text(SLA__c) )</errorConditionFormula>
        <errorMessage>Please choose SLA field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSN_Number_valid</fullName>
        <active>false</active>
        <errorConditionFormula>NOT( REGEX(SSN_Number__c , &quot;^[0-9][a-z A-Z]{3}-[0-9][a-z A-Z]{2}-[0-9][a-z A-Z]{4}&quot;))</errorConditionFormula>
        <errorDisplayField>SSN_Number__c</errorDisplayField>
        <errorMessage>Enter SSN like Below format 000-00-0000</errorMessage>
    </validationRules>
</CustomObject>